@@ -1,80 +1,99 @@
 package com.salesianostriana.dam.DiosFiestasGonzaloDemo.servicios;
 
-import java.time.LocalDate;
-import java.util.List;
-
-import org.springframework.stereotype.Service;
-
 import com.salesianostriana.dam.DiosFiestasGonzaloDemo.modelos.Expedicion;
 import com.salesianostriana.dam.DiosFiestasGonzaloDemo.repositorio.ExpedicionRepositorio;
 import com.salesianostriana.dam.DiosFiestasGonzaloDemo.servicios.base.ServiciosBase;
+import org.springframework.stereotype.Service;
 
-import jakarta.annotation.PostConstruct;
-
+import java.time.LocalDate;
+import java.util.Comparator;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
-public class ExpedicionServicio extends ServiciosBase<Expedicion,Long,ExpedicionRepositorio>{
+public class ExpedicionServicio extends ServiciosBase<Expedicion, Long, ExpedicionRepositorio> {
 
-   
-
-   
-   public List<Expedicion> buscarExpedicion(String nombre){
-	   return repositorio.findAll().stream().filter(expedicion -> expedicion.getNombre().toLowerCase().contains(nombre)).toList();
-   }
-   
- public List<Expedicion> filtrarCategoria(int categoria){
-    if(categoria == 4){
-        return repositorio.findAll();
-    }else{
-	return  repositorio.findAll().stream().filter(expedicion -> expedicion.getCategoria() == categoria).toList(); 
+    public List<Expedicion> buscarExpedicion(String nombre) {
+        if (nombre == null || nombre.isBlank()) {
+            return repositorio.findAll();
         }
-    }   
-public List<Expedicion> ordenarPrecioMayor() {
-    List<Expedicion> expediciones = repositorio.findAll();
-    expediciones.sort((e1, e2) -> Double.compare(e2.getPrecio(), e1.getPrecio())); 
-    return expediciones;
-}
+        return repositorio.findAll().stream()
+                .filter(e -> e.getNombre().toLowerCase().contains(nombre.toLowerCase()))
+                .collect(Collectors.toList());
+    }
 
-public List<Expedicion> ordenarPrecioMenor() {
-    List<Expedicion> expediciones = repositorio.findAll();
-    expediciones.sort((e1, e2) -> Double.compare(e1.getPrecio(), e2.getPrecio())); 
-    return expediciones;
-}
+    public List<Expedicion> filtrarCategoria(int categoria) {
+        return categoria == 4 ? 
+            repositorio.findAll() : 
+            repositorio.findAll().stream()
+                .filter(e -> e.getCategoria() == categoria)
+                .collect(Collectors.toList());
+    }
 
-public List<Expedicion> ordenarFechaMayor() {
-    List<Expedicion> expediciones = repositorio.findAll();
-    expediciones.sort((e1, e2) -> e1.getFechaExpedicion().compareTo(e2.getFechaExpedicion()));
-    return expediciones;
-}
+    public List<Expedicion> ordenarPrecioMayor() {
+        return repositorio.findAll().stream()
+                .sorted(Comparator.comparing(Expedicion::getPrecio).reversed())
+                .collect(Collectors.toList());
+    }
 
-public List<Expedicion> ordenarFechaMenor() {
-    List<Expedicion> expediciones = repositorio.findAll();
-    expediciones.sort((e1, e2) -> -e1.getFechaExpedicion().compareTo(e2.getFechaExpedicion()));
-    return expediciones;
-}
-//Logica de negocio
+    public List<Expedicion> ordenarPrecioMenor() {
+        return repositorio.findAll().stream()
+                .sorted(Comparator.comparing(Expedicion::getPrecio))
+                .collect(Collectors.toList());
+    }
 
-public List<Expedicion> descuentoFechaProxima(){
-    List<Expedicion> expediciones = repositorio.findAll();
-    expediciones.stream().filter(exp -> exp.getFechaExpedicion().isBefore(LocalDate.now().plusMonths(5))).toList();
-    expediciones.forEach(exp -> exp.setPrecio(exp.getPrecio()-(exp.getPrecio()*10)/100));
-    return expediciones;
+    public List<Expedicion> ordenarFechaMayor() {
+        return repositorio.findAll().stream()
+                .sorted(Comparator.comparing(Expedicion::getFechaExpedicion))
+                .collect(Collectors.toList());
+    }
 
-}
+    public List<Expedicion> ordenarFechaMenor() {
+        return repositorio.findAll().stream()
+                .sorted(Comparator.comparing(Expedicion::getFechaExpedicion).reversed())
+                .collect(Collectors.toList());
+    }
 
-public List<Expedicion> descuentoMuchoPrecio(){
-    List<Expedicion> expediciones = repositorio.findAll();
-    expediciones.stream().filter(exp -> exp.getPrecio() > 10000).toList();
-    expediciones.forEach(exp -> exp.setPrecio(exp.getPrecio()-(exp.getPrecio()*15)/100));
-    return expediciones;
+    public List<Expedicion> aplicarDescuentos(List<Expedicion> expediciones) {
+        return expediciones.stream()
+                .map(this::aplicarDescuentoIndividual)
+                .collect(Collectors.toList());
+    }
 
-}
+    private Expedicion aplicarDescuentoIndividual(Expedicion exp) {
+        if (exp.getPrecioOriginal() == null) {
+            exp.setPrecioOriginal(exp.getPrecio());
+        }
 
-public List<Expedicion> descuentoCantidadUsuarios(){
-    List<Expedicion> expediciones = repositorio.findAll();
-    expediciones.stream().filter(exp -> exp.getUsuarios().size()-exp.getCapacidad() < exp.getCapacidad()-(exp.getCapacidad()/2)).toList();
-    expediciones.forEach(exp -> exp.setPrecio(exp.getPrecio()-(exp.getPrecio()*35)/100));
-    return expediciones;
-}
+        double precioFinal = exp.getPrecioOriginal();
+        StringBuilder motivos = new StringBuilder();
 
+        // Descuento por capacidad (<40%)
+        if (exp.getUsuarios().size() < exp.getCapacidad() * 0.4) {
+            double descuento = precioFinal * 0.20;
+            precioFinal -= descuento;
+            motivos.append("35% por baja ocupación. ");
+        }
+
+        // Descuento por precio alto (>10,000€)
+        if (exp.getPrecioOriginal() > 10000) {
+            double descuento = precioFinal * 0.15;
+            precioFinal -= descuento;
+            motivos.append("15% por precio alto. ");
+        }
+
+        // Descuento por fecha próxima (<6 meses)
+        if (exp.getFechaExpedicion().isBefore(LocalDate.now().plusMonths(6))) {
+            double descuento = precioFinal * 0.10;
+            precioFinal -= descuento;
+            motivos.append("10% por fecha próxima. ");
+        }
+
+        if (motivos.length() > 0) {
+            exp.setPrecio(precioFinal);
+            exp.setMotivoDescuento(motivos.toString().trim());
+        }
+
+        return exp;
+    }
 }
